update, unit tests, thread safe, UI

--- a/web-s/src/app/Components/modal/modal.component.html
+++ b/web-s/src/app/Components/modal/modal.component.html
@@ -45,7 +45,11 @@
                 (click)="removeSynonym(i)"
                 class="btn-remove-synonym"
               >
-                <img src="../../../assets/icons/substract.png" alt="" />
+                <img
+                  class="substract-icon"
+                  src="../../../assets/icons/substract.png"
+                  alt=""
+                />
               </span>
             </div>
             <span
