--- a/web-s/src/app/Components/modal/modal.component.scss
+++ b/web-s/src/app/Components/modal/modal.component.scss
@@ -109,6 +109,9 @@
                 border-radius: 50%;
                 text-align: center;
                 font-size: 20px;
+                .substract-icon{
+                    padding-top: 1rem;
+                }
             }
         }
         
